--- a/admin/index.html
+++ b/admin/index.html
@@ -1,3 +1,6 @@
+<!--
+    <div id="ya-site-results" data-bem="{&quot;tld&quot;: &quot;ru&quot;,&quot;language&quot;: &quot;ru&quot;,&quot;encoding&quot;: &quot;&quot;,&quot;htmlcss&quot;: &quot;1.x&quot;,&quot;updatehash&quot;: true}"></div><script type="text/javascript">(function(w,d,c){var s=d.createElement('script'),h=d.getElementsByTagName('script')[0];s.type='text/javascript';s.async=true;s.charset='utf-8';s.src=(d.location.protocol==='https:'?'https:':'http:')+'//site.yandex.net/v2.0/js/all.js';h.parentNode.insertBefore(s,h);(w[c]||(w[c]=[])).push(function(){Ya.Site.Results.init();})})(window,document,'yandex_site_callbacks');</script>
+-->
 <!DOCTYPE html>
 <html lang="ua">
 
@@ -25,8 +28,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="yandex-verification" content="b64609ce82e285b9" />
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="country/main.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
     <link rel="shortcut icon" href="serp.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -47,36 +50,12 @@
     <main>
         <div class="container">
 
-            <h1>Добро пожаловать на сайт <br>Постсоветское пространство</h1>
-            <hr>
-            <p>Этот сайт посвящен трем братьям: России, Белоруссии и Украины. На этом сайте будет расказано о дружбе, о
-                ссорах, об объединениях трех братьев.
-            </p>
-            <p>
-                Беларусь, Россия и Украина похожи: своим менталитетом, языками, традициями, кухнями. Особенно это
-                перемешалось после нахождения в составе СССР.
-                Мы вместе воевали в войнах, гуляли и т.д. Но в последнее время Украина отдаляется от Беларусси и сильно
-                отдаляется от России. Они думают что под США им будет лучше, но это не так.
-            </p>
+            <div id="ya-site-results"
+                data-bem="{&quot;tld&quot;: &quot;ru&quot;,&quot;language&quot;: &quot;ru&quot;,&quot;encoding&quot;: &quot;&quot;,&quot;htmlcss&quot;: &quot;1.x&quot;,&quot;updatehash&quot;: true}">
+            </div>
+            <script
+                type="text/javascript">(function (w, d, c) { var s = d.createElement('script'), h = d.getElementsByTagName('script')[0]; s.type = 'text/javascript'; s.async = true; s.charset = 'utf-8'; s.src = (d.location.protocol === 'https:' ? 'https:' : 'http:') + '//site.yandex.net/v2.0/js/all.js'; h.parentNode.insertBefore(s, h); (w[c] || (w[c] = [])).push(function () { Ya.Site.Results.init(); }) })(window, document, 'yandex_site_callbacks');</script>
 
-            <iframe src="https://datalens.yandex/tat4enkerl0ap?_embedded=1&_theme=dark" width="100%" height="400"
-                frameborder="0"></iframe>
-
-
-            <hr>
-            <!-- Put this script tag to the <head> of your page -->
-            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
-
-            <script type="text/javascript">
-                VK.init({ apiId: 7752244, onlyWidgets: true });
-            </script>
-
-            <!-- Put this div tag to the place, where the Comments block will be -->
-            <div id="vk_comments"></div>
-            <script type="text/javascript">
-                VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
-            </script>
-            <br>
 
         </div>
 
