--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -56,6 +56,7 @@
             <a href="gos-simvolika/">Государственная символика</a>
             <a href="russian-tradition/">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
+            <a href="/political-na-postsovet-space/country/russia/constitution/">Конституция РФ</a>
         </div>
     </header>
     <main>
@@ -81,7 +82,7 @@
                 км<sup>2</sup>;
                 население страны (в пределах её заявленной территории) составляет 146 748 590 чел. (на 2020).
                 Занимает первое место в мире по территории, шестое — по
-                объёму ВВП и девятое — по численности населения.
+                объёму <abbr title="Валовой Внутренний продукт">ВВП</abbr> и девятое — по численности населения.
             </p>
             <div class="photo">
                 <img src="Russia.png" alt="">
@@ -302,7 +303,7 @@
                             <tr>
                                 <td>3</td>
                                 <td>Преступность</td>
-                                <td>Да в Росси тоже есть преступнеость, но она ниже чем в США. Потому что наша Полиция
+                                <td>Да в России тоже есть преступнеость, но она ниже чем в США. Потому что наша Полиция
                                     может
                                     появиться везде, даже в самом опасном районе.</td>
                                 <td>В США преступность выше и их полиция не отличается храбростью, как наша. Из-за этого
@@ -313,9 +314,10 @@
                                 <td>4</td>
                                 <td>Отношение к другим нациям, рассам и т.д.</td>
                                 <td>
-                                    Россия - это многонациональная страна. У нас есть, и Китайцы, и чернокожие. Согласно
-                                    статье
-                                    19 пункт 2 Конституции Российской Федерации говориться:
+                                    Россия - это многонациональная страна. У нас есть, и Китайцы, и чернокожие. В
+                                    ст 19 ч. 2  <abbr
+                                    title="Конституция Российской Федерации принята всенародным голосованием 12 декабря 1993 года с изменениями, одобренными в ходе общероссийского голосования 1 июля 2020 года">
+                                    Конституции Российской Федерации</abbr> говориться:
                                     <i>
                                         "Государство гарантирует равенство прав и свобод человека
                                         и гражданина независимо от пола, расы, национальности, языка,
