--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -56,6 +56,7 @@
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика </a>
             <a href="/political-na-postsovet-space/country/russia/russian-tradition/">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент </a>
+            <a href="/political-na-postsovet-space/country/russia/constitution/">Конституция РФ</a>
         </div>
     </header>
     <main>
@@ -542,8 +543,8 @@
 
                                 <td>
                                     <a target="_blank"
-                                        href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир 
-                                        Владимирович  Путин</a> <br> <small>(исполняющий обязанности)</small>
+                                        href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                                        Владимирович Путин</a> <br> <small>(исполняющий обязанности)</small>
                                 </td>
                                 <td>31 декабря 1999</td>
                                 <td>7 мая 2000</td>
@@ -556,8 +557,8 @@
                                 <td>1</td>
                                 <td rowspan="2"><a target="_blank"
                                         href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                        
-                                        Владимирович  Путин</a> <br> (р. 1952)</td>
+
+                                        Владимирович Путин</a> <br> (р. 1952)</td>
                                 <td>7 мая 2000</td>
                                 <td>7 мая 2004</td>
                                 <td>4 года</td>
@@ -574,8 +575,8 @@
                                 <td>1</td>
 
                                 <td><a target="_blank"
-                                        href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий 
-                                        Анатольевич 
+                                        href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий
+                                        Анатольевич
                                         Медведев</a> <br> (р. 1965)</td>
                                 <td>7 мая 2008</td>
                                 <td>7 мая 2012</td>
@@ -590,7 +591,7 @@
                             </td>
                             <td rowspan=" 2"><a target="_blank"
                                         href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                        
+
                                         Владимирович Путин</a> <br> (р. 1952)</td>
                                 <td>7 мая 2012</td>
                                 <td>7 мая 2018</td>
@@ -724,6 +725,7 @@
                             традиции</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/president/"> Президент Российской
                             Федераци</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/constitution/">Конституция РФ</a></p>
                     <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
                                     src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
