--- a/country/russia/constitution/index.html
+++ b/country/russia/constitution/index.html
@@ -342,6 +342,203 @@
                     Федерации.
                 </li>
             </ol>
+            <h3>ГЛАВА 2. <br> ПРАВА И СВОБОДЫ ЧЕЛОВЕКА И ГРАЖДАНИНА</h3>
+            <h4>Статья 17</h4>
+            <ol>
+                <li>
+                    В Российской Федерации признаются и гарантируются права и свободы человека и гражданина согласно
+                    общепризнанным принципам и нормам международного права и в соответствии с настоящей Конституцией.
+                </li>
+                <li>
+                    Основные права и свободы человека неотчуждаемы и принадлежат каждому от рождения.
+                </li>
+                <li>
+                    Осуществление прав и свобод человека и гражданина не должно нарушать права и свободы других лиц.
+                </li>
+            </ol>
+            <h4>Статья 18</h4>
+            <p>
+                Права и свободы человека и гражданина являются непосредственно действующими. Они определяют смысл,
+                содержание и применение законов, деятельность законодательной и исполнительной власти, местного
+                самоуправления и обеспечиваются правосудием.
+            </p>
+            <h4>Статья 19</h4>
+            <ol>
+                <li>
+                    Все равны перед законом и судом.
+                </li>
+                <li>
+                    Государство гарантирует равенство прав и свобод человека и гражданина независимо от пола, расы,
+                    национальности, языка, происхождения, имущественного и должностного положения, места жительства,
+                    отношения к религии, убеждений, принадлежности к общественным объединениям, а также других
+                    обстоятельств. Запрещаются любые формы ограничения прав граждан по признакам социальной, расовой,
+                    национальной, языковой или религиозной принадлежности.
+                </li>
+                <li>
+                    Мужчина и женщина имеют равные права и свободы и равные возможности для их реализации.
+                </li>
+            </ol>
+            <h4>Статья 20</h4>
+            <ol>
+                <li>Каждый имеет право на жизнь.</li>
+                <li>
+                    Смертная казнь впредь до ее отмены может устанавливаться федеральным законом в качестве
+                    исключительной меры наказания за особо тяжкие преступления против жизни при предоставлении
+                    обвиняемому права на рассмотрение его дела судом с участием присяжных заседателей.
+                </li>
+            </ol>
+            <h4>Статья 21</h4>
+            <ol>
+                <li>Каждый имеет право на свободу и личную неприкосновенность.</li>
+                <li>Арест, заключение под стражу и содержание под стражей допускаются только по судебному решению. До
+                    судебного решения лицо не может быть подвергнуто задержанию на срок более 48 часов.</li>
+            </ol>
+            <h4>Статья 22</h4>
+            <ol>
+                <li>
+                    Каждый имеет право на свободу и личную неприкосновенность.
+                </li>
+                <li>
+                    Арест, заключение под стражу и содержание под стражей допускаются только по судебному решению. До
+                    судебного решения лицо не может быть подвергнуто задержанию на срок более 48 часов.
+                </li>
+            </ol>
+            <h4>Статья 23</h4>
+            <ol>
+                <li> Каждый имеет право на неприкосновенность частной жизни, личную и семейную тайну, защиту своей
+                    чести и доброго имени.</li>
+                <li>
+                    Каждый имеет право на тайну переписки, телефонных переговоров, почтовых, телеграфных и иных
+                    сообщений. Ограничение этого права допускается только на основании судебного решения.
+                </li>
+            </ol>
+            <h4>Статья 24</h4>
+            <ol>
+                <li> Сбор, хранение, использование и распространение информации о частной жизни лица без его согласия не
+                    допускаются.</li>
+                <li>
+                    Органы государственной власти и органы местного самоуправления, их должностные лица обязаны
+                    обеспечить каждому возможность ознакомления с документами и материалами, непосредственно
+                    затрагивающими его права и свободы, если иное не предусмотрено законом.
+                </li>
+            </ol>
+            <h4>Статья 25</h4>
+            <p>
+                Жилище неприкосновенно. Никто не вправе проникать в жилище против воли проживающих в нем лиц иначе как в
+                случаях, установленных федеральным законом, или на основании судебного решения.
+            </p>
+            <h4>Статья 26</h4>
+            <ol>
+                <li>Каждый вправе определять и указывать свою национальную принадлежность. Никто не может быть
+                    принужден к определению и указанию своей национальной принадлежности.</li>
+                <li>
+                    Каждый имеет право на пользование родным языком, на свободный выбор языка общения, воспитания,
+                    обучения и творчества.
+                </li>
+            </ol>
+            <h4>Статья 27</h4>
+            <ol>
+                <li>Каждый, кто законно находится на территории Российской Федерации, имеет право свободно
+                    передвигаться, выбирать место пребывания и жительства.</li>
+                <li>
+                    Каждый может свободно выезжать за пределы Российской Федерации. Гражданин Российской Федерации
+                    имеет право беспрепятственно возвращаться в Российскую Федерацию.
+                </li>
+            </ol>
+            <h4>Статья 28</h4>
+            <p>
+                Каждому гарантируется свобода совести, свобода вероисповедания, включая право исповедовать индивидуально
+                или совместно с другими любую религию или не исповедовать никакой, свободно выбирать, иметь и
+                распространять религиозные и иные убеждения и действовать в соответствии с ними.
+            </p>
+            <h4>Статья 29</h4>
+            <ol>
+                <li>
+                    Каждому гарантируется свобода мысли и слова.
+                </li>
+                <li>
+                    Не допускаются пропаганда или агитация, возбуждающие социальную, расовую, национальную или
+                    религиозную ненависть и вражду. Запрещается пропаганда социального, расового, национального,
+                    религиозного или языкового превосходства.
+                </li>
+                <li>
+                    Никто не может быть принужден к выражению своих мнений и убеждений или отказу от них.
+                </li>
+                <li>
+                    Каждый имеет право свободно искать, получать, передавать, производить и распространять информацию
+                    любым законным способом. Перечень сведений, составляющих государственную тайну, определяется
+                    федеральным законом.
+                </li>
+                <li>
+                    Гарантируется свобода массовой информации. Цензура запрещается.
+                </li>
+            </ol>
+            <h4>Статья 30</h4>
+            <ol>
+                <li>Каждый имеет право на объединение, включая право создавать профессиональные союзы для защиты
+                    своих интересов. Свобода деятельности общественных объединений гарантируется.</li>
+                <li>
+                    Никто не может быть принужден к вступлению в какое-либо объединение или пребыванию в нем.
+                </li>
+            </ol>
+            <h4>Статья 31</h4>
+            <p>
+                Граждане Российской Федерации имеют право собираться мирно, без оружия, проводить собрания, митинги и
+                демонстрации, шествия и пикетирование.
+            </p>
+            <h4>Статья 32</h4>
+            <ol>
+                <li>Граждане Российской Федерации имеют право участвовать в управлении делами государства как
+                    непосредственно, так и через своих представителей.</li>
+                <li>
+                    Граждане Российской Федерации имеют право избирать и быть избранными в органы государственной
+                    власти и органы местного самоуправления, а также участвовать в референдуме.
+                </li>
+                <li>
+                    Не имеют права избирать и быть избранными граждане, признанные судом недееспособными, а также
+                    содержащиеся в местах лишения свободы по приговору суда.
+                </li>
+                <li>
+                    Граждане Российской Федерации имеют равный доступ к государственной службе.
+                </li>
+                <li>
+                    5. Граждане Российской Федерации имеют право участвовать в отправлении правосудия.
+                </li>
+            </ol>
+            <h4>Статья 33</h4>
+            <p>
+                Граждане Российской Федерации имеют право обращаться лично, а также направлять индивидуальные и
+                коллективные обращения в государственные органы и органы местного самоуправления.
+            </p>
+            <h4>Статья 34</h4>
+            <ol>
+                <li>
+                    Каждый имеет право на свободное использование своих способностей и имущества для
+                    предпринимательской и иной не запрещенной законом экономической деятельности.
+                </li>
+                <li>
+                    Не допускается экономическая деятельность, направленная на монополизацию и недобросовестную
+                    конкуренцию.
+                </li>
+            </ol>
+            <h4>Статья 35</h4>
+            <ol>
+                <li>
+                    Право частной собственности охраняется законом.
+                </li>
+                <li>
+                    Каждый вправе иметь имущество в собственности, владеть, пользоваться и распоряжаться им как
+                    единолично, так и совместно с другими лицами.
+                </li>
+                <li>
+                    Никто не может быть лишен своего имущества иначе как по решению суда. Принудительное отчуждение
+                    имущества для государственных нужд может быть произведено только при условии предварительного и
+                    равноценного возмещения.
+                </li>
+                <li>
+                    Право наследования гарантируется.
+                </li>
+            </ol>
             <hr>
             <!-- Put this script tag to the <head> of your page -->
             <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
