--- a/country/russia/constitution/index.html
+++ b/country/russia/constitution/index.html
@@ -539,6 +539,294 @@
                     Право наследования гарантируется.
                 </li>
             </ol>
+            <h4>Статья 36</h4>
+            <ol>
+                <li>
+                    Граждане и их объединения вправе иметь в частной собственности землю.
+                </li>
+                <li>
+                    Владение, пользование и распоряжение землей и другими природными ресурсами осуществляются их
+                    собственниками свободно, если это не наносит ущерба окружающей среде и не нарушает прав и законных
+                    интересов иных лиц.
+                </li>
+                <li>
+                    Условия и порядок пользования землей определяются на основе федерального закона.
+                </li>
+            </ol>
+            <h4>Статья 37</h4>
+            <ol>
+                <li>
+                    Труд свободен. Каждый имеет право свободно распоряжаться своими способностями к труду, выбирать
+                    род деятельности и профессию.
+                </li>
+                <li>
+                    Принудительный труд запрещен.
+                </li>
+                <li>
+                    Каждый имеет право на труд в условиях, отвечающих требованиям безопасности и гигиены, на
+                    вознаграждение за труд без какой бы то ни было дискриминации и не ниже установленного федеральным
+                    законом минимального размера оплаты труда, а также право на защиту от безработицы.
+                </li>
+                <li>
+                    Признается право на индивидуальные и коллективные трудовые споры с использованием установленных
+                    федеральным законом способов их разрешения, включая право на забастовку.
+                </li>
+                <li>
+                    Каждый имеет право на отдых. Работающему по трудовому договору гарантируются установленные
+                    федеральным законом продолжительность рабочего времени, выходные и праздничные дни, оплачиваемый
+                    ежегодный отпуск.
+                </li>
+            </ol>
+            <h4>Статья 38</h4>
+            <ol>
+                <li>Материнство и детство, семья находятся под защитой государства.</li>
+                <li>
+                    Забота о детях, их воспитание - равное право и обязанность родителей.
+                </li>
+                <li>
+                    Трудоспособные дети, достигшие 18 лет, должны заботиться о нетрудоспособных родителях.
+                </li>
+            </ol>
+            <h4>Статья 39</h4>
+            <ol>
+                <li>
+                    Каждому гарантируется социальное обеспечение по возрасту, в случае болезни, инвалидности, потери
+                    кормильца, для воспитания детей и в иных случаях, установленных законом.
+                </li>
+                <li>
+                    Государственные пенсии и социальные пособия устанавливаются законом.
+                </li>
+                <li>
+                    Поощряются добровольное социальное страхование, создание
+                    дополнительных форм социального обеспечения и благотворительность.
+                </li>
+            </ol>
+            <h4>Статья 40</h4>
+            <ol>
+                <li>Каждый имеет право на жилище. Никто не может быть произвольно лишен жилища.</li>
+                <li>
+                    Органы государственной власти и органы местного самоуправления поощряют жилищное строительство,
+                    создают условия для осуществления права на жилище.
+                </li>
+                <li>
+                    Малоимущим, иным указанным в законе гражданам, нуждающимся в жилище, оно предоставляется
+                    бесплатно или за доступную плату из государственных, муниципальных и других жилищных фондов в
+                    соответствии с установленными законом нормами.
+                </li>
+            </ol>
+            <h4>Статья 41</h4>
+            <ol>
+                <li>Каждый имеет право на охрану здоровья и медицинскую помощь. Медицинская помощь в государственных и
+                    муниципальных учреждениях здравоохранения оказывается гражданам бесплатно за счет средств
+                    соответствующего бюджета, страховых взносов, других поступлений.</li>
+                <li>
+                    В Российской Федерации финансируются федеральные программы охраны и укрепления здоровья
+                    населения, принимаются меры по развитию государственной, муниципальной, частной систем
+                    здравоохранения, поощряется деятельность, способствующая укреплению здоровья человека, развитию
+                    физической культуры и спорта, экологическому и санитарно-эпидемиологическому благополучию.
+                </li>
+                <li>
+                    Сокрытие должностными лицами фактов и обстоятельств, создающих угрозу для жизни и здоровья людей,
+                    влечет за собой ответственность в соответствии с федеральным законом.
+                </li>
+            </ol>
+            <h4>Статья 42</h4>
+            <p>
+                Каждый имеет право на благоприятную окружающую среду, достоверную информацию о ее состоянии и на
+                возмещение ущерба, причиненного его здоровью или имуществу экологическим правонарушением.
+            </p>
+            <h4>Статья 43</h4>
+            <ol>
+                <li>
+                    Каждый имеет право на образование.
+                </li>
+                <li>
+                    Гарантируются общедоступность и бесплатность дошкольного, основного общего и среднего
+                    профессионального образования в государственных или муниципальных образовательных учреждениях и на
+                    предприятиях
+                </li>
+                <li>
+                    Каждый вправе на конкурсной основе бесплатно получить высшее образование в государственном или
+                    муниципальном образовательном учреждении и на предприятии.
+                </li>
+                <li>
+                    Основное общее образование обязательно. Родители или лица, их заменяющие, обеспечивают получение
+                    детьми основного общего образования.
+                </li>
+                <li>
+                    Российская Федерация устанавливает федеральные государственные образовательные стандарты,
+                    поддерживает различные формы образования и самообразования.
+                </li>
+            </ol>
+            <h4>Статья 44</h4>
+            <ol>
+                <li>
+                    Каждому гарантируется свобода литературного, художественного, научного, технического и других видов
+                    творчества, преподавания. Интеллектуальная собственность охраняется законом.
+                </li>
+                <li>
+                    Каждый имеет право на участие в культурной жизни и пользование учреждениями культуры, на доступ к
+                    культурным ценностям.
+                </li>
+                <li>
+                    Каждый обязан заботиться о сохранении исторического и культурного наследия, беречь памятники
+                    истории и культуры.
+                </li>
+            </ol>
+            <h4>Статья 45</h4>
+            <ol>
+                <li>
+                    Государственная защита прав и свобод человека и гражданина в Российской Федерации гарантируется.
+                </li>
+                <li>
+                    Каждый вправе защищать свои права и свободы всеми способами, не запрещенными законом.
+                </li>
+            </ol>
+            <h4>Статья 46</h4>
+            <ol>
+                <li>Каждому гарантируется судебная защита его прав и свобод.</li>
+                <li>Решения и действия (или бездействие) органов государственной власти, органов местного
+                    самоуправления, общественных объединений и должностных лиц могут быть обжалованы в суд.</li>
+                <li>Каждый вправе в соответствии с международными договорами Российской Федерации обращаться в
+                    межгосударственные органы по защите прав и свобод человека, если исчерпаны все имеющиеся
+                    внутригосударственные средства правовой защиты.</li>
+            </ol>
+            <h4>Статья 47</h4>
+            <ol>
+                <li>Никто не может быть лишен права на рассмотрение его дела в том суде и тем судьей, к подсудности
+                    которых оно отнесено законом.</li>
+                <li>Обвиняемый в совершении преступления имеет право на рассмотрение его дела судом с участием присяжных
+                    заседателей в случаях, предусмотренных федеральным законом.</li>
+            </ol>
+            <h4>Статья 48</h4>
+            <ol>
+                <li>
+                    Каждому гарантируется право на получение квалифицированной юридической помощи. В случаях,
+                    предусмотренных законом, юридическая помощь оказывается бесплатно.
+                </li>
+                <li>
+                    Каждый задержанный, заключенный под стражу, обвиняемый в совершении преступления имеет право
+                    пользоваться помощью адвоката (защитника) с момента соответственно задержания, заключения под стражу
+                    или предъявления обвинения.
+                </li>
+            </ol>
+            <h4>Статья 49</h4>
+            <ol>
+                <li>Каждый обвиняемый в совершении преступления считается невиновным, пока его виновность не будет
+                    доказана в предусмотренном федеральным законом порядке и установлена вступившим в законную силу
+                    приговором суда.</li>
+                <li>Обвиняемый не обязан доказывать свою невиновность.</li>
+                <li>Неустранимые сомнения в виновности лица толкуются в пользу обвиняемого.</li>
+            </ol>
+            <h4>Статья 50</h4>
+            <ol>
+                <li>Никто не может быть повторно осужден за одно и то же преступление.</li>
+                <li>При осуществлении правосудия не допускается использование доказательств, полученных с нарушением
+                    федерального закона.</li>
+                <li>Каждый осужденный за преступление имеет право на пересмотр приговора вышестоящим судом в порядке,
+                    установленном федеральным законом, а также право просить о помиловании или смягчении наказания.</li>
+            </ol>
+            <h4>Статья 51</h4>
+            <ol>
+                <li>Никто не обязан свидетельствовать против себя самого, своего супруга и близких родственников, круг
+                    которых определяется федеральным законом.</li>
+                <li>Федеральным законом могут устанавливаться иные случаи освобождения от обязанности давать
+                    свидетельские показания.</li>
+            </ol>
+            <h4>Статья 52</h4>
+            <p>
+                Права потерпевших от преступлений и злоупотреблений властью охраняются законом. Государство обеспечивает
+                потерпевшим доступ к правосудию и компенсацию причиненного ущерба.
+            </p>
+            <h4>Статья 53</h4>
+            <p>
+                Каждый имеет право на возмещение государством вреда, причиненного незаконными действиями (или
+                бездействием) органов государственной власти или их должностных лиц.
+            </p>
+            <h4>Статья 54</h4>
+            <ol>
+                <li>Закон, устанавливающий или отягчающий ответственность, обратной силы не имеет.</li>
+                <li>Никто не может нести ответственность за деяние, которое в момент его совершения не признавалось
+                    правонарушением. Если после совершения правонарушения ответственность за него устранена или
+                    смягчена, применяется новый закон.</li>
+            </ol>
+            <h4>Статья 55</h4>
+            <ol>
+                <li>
+                    Перечисление в Конституции Российской Федерации основных прав и свобод не должно толковаться как
+                    отрицание или умаление других общепризнанных прав и свобод человека и гражданина.
+                </li>
+                <li>
+                    В Российской Федерации не должны издаваться законы, отменяющие или умаляющие права и свободы
+                    человека и гражданина.
+                </li>
+                <li>
+                    Права и свободы человека и гражданина могут быть ограничены федеральным законом только в той мере, в
+                    какой это необходимо в целях защиты основ конституционного строя, нравственности, здоровья, прав и
+                    законных интересов других лиц, обеспечения обороны страны и безопасности государства.
+                </li>
+            </ol>
+            <h4>Статья 56</h4>
+            <ol>
+                <li>В условиях чрезвычайного положения для обеспечения безопасности граждан и защиты конституционного
+                    строя в соответствии с федеральным конституционным законом могут устанавливаться отдельные
+                    ограничения прав и свобод с указанием пределов и срока их действия.</li>
+                <li>Чрезвычайное положение на всей территории Российской Федерации и в ее отдельных местностях может
+                    вводиться при наличии обстоятельств и в порядке, установленных федеральным конституционным законом.
+                </li>
+                <li>Не подлежат ограничению права и свободы, предусмотренные статьями 20, 21, 23 (часть 1), 24, 28, 34
+                    (часть 1), 40 (часть 1), 46 - 54 Конституции Российской Федерации.</li>
+            </ol>
+            <h4>Статья 57</h4>
+            <p>Каждый обязан платить законно установленные налоги и сборы. Законы, устанавливающие новые налоги или
+                ухудшающие положение налогоплательщиков, обратной силы не имеют.</p>
+            <h4>Статья 58</h4>
+            <p>Каждый обязан сохранять природу и окружающую среду, бережно относиться к природным богатствам.</p>
+            <h4>Статья 59</h4>
+            <ol>
+                <li>Защита Отечества является долгом и обязанностью гражданина Российской Федерации.</li>
+                <li>Гражданин Российской Федерации несет военную службу в соответствии с федеральным законом.</li>
+                <li>Гражданин Российской Федерации в случае, если его убеждениям или вероисповеданию противоречит
+                    несение военной службы, а также в иных установленных федеральным законом случаях имеет право на
+                    замену ее альтернативной гражданской службой.</li>
+            </ol>
+            <h4>Статья 60</h4>
+            <p>
+                Гражданин Российской Федерации может самостоятельно осуществлять в полном объеме свои права и
+                обязанности с 18 лет.
+            </p>
+            <h4>Статья 61</h4>
+            <ol>
+                <li>Гражданин Российской Федерации не может быть выслан за пределы Российской Федерации или выдан
+                    другому государству.</li>
+                <li>Российская Федерация гарантирует своим гражданам защиту и покровительство за ее пределами.</li>
+            </ol>
+            <h4>Статья 62</h4>
+            <ol>
+                <li>Гражданин Российской Федерации может иметь гражданство иностранного государства (двойное
+                    гражданство) в соответствии с федеральным законом или международным договором Российской Федерации.
+                </li>
+                <li>Наличие у гражданина Российской Федерации гражданства иностранного государства не умаляет его прав и
+                    свобод и не освобождает от обязанностей, вытекающих из российского гражданства, если иное не
+                    предусмотрено федеральным законом или международным договором Российской Федерации.</li>
+                <li>Иностранные граждане и лица без гражданства пользуются в Российской Федерации правами и несут
+                    обязанности наравне с гражданами Российской Федерации, кроме случаев, установленных федеральным
+                    законом или международным договором Российской Федерации.</li>
+            </ol>
+            <h4>Статья 63</h4>
+            <ol>
+                <li>Российская Федерация предоставляет политическое убежище иностранным гражданам и лицам без
+                    гражданства в соответствии с общепризнанными нормами международного права.</li>
+                <li>В Российской Федерации не допускается выдача другим государствам лиц, преследуемых за политические
+                    убеждения, а также за действия (или бездействие), не признаваемые в Российской Федерации
+                    преступлением. Выдача лиц, обвиняемых в совершении преступления, а также передача осужденных для
+                    отбывания наказания в других государствах осуществляются на основе федерального закона или
+                    международного договора Российской Федерации.</li>
+            </ol>
+            <h4>Статья 64</h4>
+            <p>Положения настоящей главы составляют основы правового статуса личности в Российской Федерации и не могут
+                быть изменены иначе как в порядке, установленном настоящей Конституцией.</p>
+
             <hr>
             <!-- Put this script tag to the <head> of your page -->
             <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
